  * Allow users to permanently fix the title of a tab
  * Added command line option to specify working directory
  * Improve transparency support in composited desktops.
  * The tab bar can now be hidden and/or scrolled.
  * Add configurability of cursor colour and shape
  * Support various VoIP URIs
  * Addcommand line option to force a particular window title

terminator 0.12:
  * Bug fixes
  * Simultaneous typing support
  * Directional terminal navigation
  * Improved search UI
  * Graphical Profile Editor
  * Bug numbers for launchpad.net are now URLs

terminator 0.11:
  * Bug fixes
  * X session support

terminator 0.10:
  * Various bug fixes.
  * New, improved config file parsing
  * Improved spawning of more complex terminal commands
  * Debug server (not useful for most people)
  * Configurable keyboard shortcuts
  * Scrollback searching
  * Support --geometry

terminator 0.9:
  * Tab support
  * Drag & Drop support
  * Added support for ~/.config/terminator/config
  * Switch the meanings of "horizontal" and "vertical" wrt splitting,
    after extensive user feedback. Added context menu icons to try and
    make the meaning clearer.
  * Added keybindings for terms size and scrollbar manipulation. Thanks 
    Emmanuel Bretelle.
  * Completely revamped config system which now transparently makes use
    of gconf settings if they are available, falls back to sensible
    defaults if not, and can be overridden entirely by ~/.config/terminator/config
  * Support terminal zooming - now you can quickly hide all terminals apart
    from one and either scale the fontsize or not.
  * New application icon from Cory Kontros
  * FreeBSD support (thanks to Thomas Hurst)
  * Watch the system monospace font setting. Closes LP #197960
  * Proxy support (via GNOME and $http_proxy)
  * GConf backend now caches
  * Fix redundant title when there is only one Term. Closes LP#215210 
  * Try much harder to find a usable shell
  * Support encodings a-la GNOME Terminal