@@ -174,6 +174,9 @@ Group all terminals in the current tab so input sent to one of them, goes to all
 .TP
 .B Super+Shift+T
 Remove grouping from all terminals in the current tab.
+.TP
+.B Ctrl+Shift+I
+Spawn a new Terminator process and thus get a new window
 .SH "Drag and Drop"
 The layout can be modified by moving terminals with Drag and Drop.
 To start dragging a terminal, hold down \fBCtrl\fP, click and hold the \fBright\fP mouse button.
