@@ -388,5 +388,9 @@ Default value: \fB<Super>t\fR
 .B ungroup_tab
 Remove grouping from all terminals in the current tab.
 Default value: \fB<Super><Shift>T\fR
+.TP
+.B new_window
+Spawn a new instance of Terminator and thus get a new window.
+Default value: \fB<Ctrl><Shift>I\fR
 .SH "SEE ALSO"
 .BR gnome\-terminal(1)
